crates/analyzer/tests/snapshots/errors__call_address_with_wrong_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: incorrect type for argument to `address`
  ┌─ [snippet]:3:11
  │
3 │   address(true)
  │           ^^^^ cannot cast type `bool` to type `address`


